# kb-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  demo.sh  projects.yaml  pyproject.toml
.claude/skills/kb-agent-usage/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: agent.py  telemetry.py  tools.py
decisions/: ADR-001-manual-tool-loop-over-sdk-runner.md  ADR-002-agent-tool-seam-threat-model.md  ADR-003-rescope-v2-inward.md  ADR-004-retrieval-gold-set-scope.md  ADR-005-accept-chromadb-cve.md  ADR-006-mcp-as-second-transport.md  ADR-007-incremental-index-and-stub-protection.md  README.md
docs/notes/: chromadb-cve-2026-45829-assessment.md  test-coverage-backfill.md  tool-seam-threat-model.md  v2-kickoff.md
eval/: gold_set.yaml
kb/: .ingest-manifest.json
kb/libraries/: anthropic.md  fastapi.md  httpx.md  opentelemetry-api.md  opentelemetry-sdk.md  pandas.md  pydantic.md  python-dotenv.md  rank-bm25.md  sqlalchemy.md  uvicorn.md
kb/projects/: defense-news-classifier.md  kb-agent.md  notes-api.md
mcp_server/: server.py
scripts/: _contract_fetch.py  check_classify_contract.py  check_notes_contract.py  eval_retrieval.py  index.py  ingest.py  lint_decisions.py
tests/: test_agent.py  test_classify_contract_check.py  test_eval_retrieval.py  test_index.py  test_ingest.py  test_kb_roundtrip.py  test_mcp_server.py  test_notes_contract_check.py  test_telemetry.py  test_tools.py
