[project]
name = "kb-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "gradio>=4.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest>=8.0"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can import the `agent` and `scripts`
# namespace packages without an installed package or __init__.py files.
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: real-boundary test — builds a real ChromaDB and loads the embedding model. Runs by default; exclude with -m 'not integration'.",
]
